--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Group-goals",
+  "name": "Public-Note",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,9 +13,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
   },
   "keywords": [],
-  "author": "",
+  "author": "Utkarsh",
   "license": "ISC"
 }
