--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Public-Note",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -13,9 +13,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index",
+    "start": "node server"
   },
   "keywords": [],
-  "author": "Utkarsh",
+  "author": "",
   "license": "ISC"
 }
